feat: Helm-first split deployment, gateway front door, persistence stack migration, and collaborative onboarding docs
Completed slices:
- S01: S01
- S02: S02
- S03: S03
- S04: S04
- S05: S05
- S06: S06

GSD-Milestone: M007
Branch: milestone/M007